--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -20,7 +20,7 @@
         </div>
     <div id="todo-app" class="w-full min-h-screen flex flex-col justify-center items-center bg-blue-200">
        
-        <div class="container w-[500px] p-4 flex flex-col justify-center items-center border-2 border-black rounded-md">
+        <div class="container  p-4 flex flex-col justify-center items-center border-2 border-black rounded-md">
             <h2 class="text-3xl font-bold mb-4">To-Do List</h2>
         <div class="flex justify-between items-center w-full mb-4">
            <form action="/tasks/<%=user.id%>" method="post" class=" w-full flex justify-center gap-2">
@@ -31,14 +31,19 @@
         <ul id="task-list">
         <% tasks.tasks.reverse().forEach((tasks) => { %>
         <li class="flex justify-between items-center w-full mb-4 border-1 border-black p-1 gap-3 rounded-md">
-        <h3 class="text-xl  "><%=tasks.title%></h3>
+            <input type="checkbox" name="checkbox" id="checkbox" class="w-4 h-4 rounded-full" onchange="window.location.href='/tasks/done/<%=user.id%>/<%=tasks._id%>'" >
+          <% if(tasks.Done){ %>
+            <span class="line-through"><%=tasks.title%></span>
+          <% }else{ %>
+            <span><%=tasks.title%></span>
+          <% } %>
         <a href="/tasks/delete/<%=user.id%>/<%=tasks._id%>" class="p-2 bg-red-500 text-white rounded-md"> Delete</a>
         </li>
         <% }); %>
         </ul>
         </div>
     </div>
-   
+   <script src="/javascripts/script.js"></script>
 </body>
 </html>
 
